# phpturd

./: .gitignore  Makefile.am  README.md  configure.ac  phpturd.conf  phpturd.spec
.github/workflows/: phpturd.yml
.tito/: customtagger.py  tito.props
src/: .gitignore  Makefile.am  phptest  phpturd.c
src/scratch/: both.txt  config.php
